Fix license links.

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*
  * CSS styles for the Agile Checklists.
  * 
- * See the file LICENSE for copyright information.
+ * See the file LICENSE.md for copyright information.
  */
 
 body {
